fixed the list overflow

--- a/src/components/product/header/cart/cartList/CartList.module.css
+++ b/src/components/product/header/cart/cartList/CartList.module.css
@@ -31,6 +31,11 @@ h3 {
   justify-content: center;
 }
 
+.content {
+  max-height: 20vh;
+  overflow-y: auto;
+}
+
 .contentEmpty {
   align-items: center;
   min-height: 150px;
